tests/snapshots/scripts_sanitized/Admin API Tool/TRIGGER - onLastWindowClose - ID 8.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Steps to perform when the file is closed
#  HISTORY:
     - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
#  
AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# Script Triggers Disabled?
Wenn [ $$SCRIPT_TRIGGERS_OFF = 1 ]
	Aktuelles Script verlassen [ Wahr ]
Ende (wenn)

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Gehe zu Layout [ Layout: "Admin API" ; Animation: Ohne ]

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
